deploy/public/css/styles.css
html,
body {
  height: 100%;
  margin: 0px;
  font-family: Helvetica Neue, Helvetica, Arial;
  -webkit-font-smoothing: sub-pixel;
  -moz-font-smoothing: sub-pixel;
  -o-font-smoothing: sub-pixel;
  font-smoothing: sub-pixel;
}
a {
  text-decoration: none;
  color: #ee5731;
}
a:hover {
  color: #f27d60;
}
a:visited {
  color: #93270c;
}
header .inner,
footer .inner {
  width: 980px;
  margin: 0px auto;
}
header {
  height: 140px;
}
header .inner {
  position: relative;
  padding-top: 25px;
}
header .inner .selector .prefix,
header .inner .selector .current,
header .inner .selector .fob {
  line-height: 84px;
  font-size: 84px;
  font-family: "Arial Black", Helvetica Neue, Helvetica, Arial;
  font-weight: bold;
  cursor: pointer;
}
header .inner .selector .prefix {
  padding: 0  0 0 10px;
  float: left;
  line-height: 73px;
}
header .inner .selector .prefix span {
  color: #333;
  font-size: 60px;
}
header .inner .selector .current {
  color: #333;
  float: left;
  margin-top: -2px;
  font-size: 84px;
}
header .inner .selector .fob {
  font-size: 60px;
  width: 60px;
  text-align: center;
  float: right;
  margin-right: 10px;
}
header .inner .selector .fob span {
  font-size: 45px;
  color: #efefef;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
header .inner .selector .fob span:hover {
  color: #6cf8fc;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
header .inner .options {
  z-index: 4000;
  position: absolute;
  left: 220px;
  top: 140px;
  display: none;
  width: 750px;
  background-color: #fff;
  background-color: rgba(0, 0, 0, 0.9);
  padding-bottom: 10px;
}
header .inner .options div {
  width: 335px;
  float: left;
  line-height: 45px;
  font-size: 40px;
  font-weight: bold;
  padding: 10px 20px;
  color: #f1f1f1;
  cursor: pointer;
}
header .inner .options div:hover {
  background: #6cf8fc;
  color: #000;
}
header .inner .options div.selected {
  background: #c16ee8;
  color: #000;
}
header .inner .options div.selected:hover {
  cursor: default;
}
section {
  display: none;
  width: 980px;
  margin: 0px auto;
  padding-bottom: 40px;
}
#list .item {
  position: relative;
  width: 225px;
  height: 200px;
  overflow: hidden;
  float: left;
  margin: 0px 10px 20px;
}
#list .item img,
#list .item div.hover,
#list .item div.hover a {
  display: block;
  width: 225px;
  height: 200px;
  position: absolute;
  top: 0;
  left: 0;
}
#list .item div.hover {
  opacity: 0;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.7);
}
#list .item div.hover:hover {
  opacity: 1;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
#list .item div.hover a {
  color: #fff;
  text-align: center;
  line-height: 200px;
  text-decoration: none;
  text-transform: capitalize;
}
#list .item:hover .hover {
  display: block;
}
#list.touch .item div.hover {
  opacity: 1.0;
  top: 160px;
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.7);
}
#list.touch .item div.hover,
#list.touch .item div.hover a {
  height: 40px;
  line-height: 40px;
}
#about {
  padding-left: 30px;
}
#about ul.contributors {
  margin-top: -5px;
}
#about ul.contributors li {
  list-style-type: none;
  margin-left: -40px;
  margin-bottom: 5px;
}
#about ul.contributors li.spade:before {
  content: "\2660 \0020";
  color: #ee5731;
}
#about ul.contributors li.club:before {
  content: "\2663 \0020";
  color: #ee5731;
}
#about ul.contributors li.heart:before {
  content: "\2665 \0020";
  color: #ee5731;
}
#about ul.contributors li.diamond:before {
  content: "\2666 \0020";
  color: #ee5731;
}
#entry > p {
  margin-left: 10px;
}
#entry form {
  margin-left: 10px;
}
#entry form div {
  clear: both;
  padding: 10px 0;
  max-width: 450px;
}
#entry form div.field {
  height: 28px;
}
#entry form div.field label {
  width: 100px;
  float: left;
  line-height: 28px;
}
#entry form div.field input[type="text"],
#entry form div.field input[type="email"],
#entry form div.field input[type="url"] {
  width: 200px;
  float: left;
  border: 1px solid #eee;
  padding: 4px;
  font-size: 15px;
}
#entry form div.checkboxes fieldset {
  border: 1px solid #eee;
  border-radius: 4px;
}
#entry form div.checkboxes fieldset div label {
  float: none;
}
#entry form div.checkboxes fieldset label {
  width: 140px;
}
#entry form div.ctrls {
  padding-top: 30px;
}
#entry form div.ctrls button {
  background-color: #333;
  color: #fff;
  display: block;
  text-align: center;
  width: 100%;
  border: none;
  padding: 12px 6px;
  font-size: 15px;
  font-weight: bold;
  margin: 0 auto;
  border-radius: 2px;
}
#show img {
  max-width: 225px;
  max-height: 220px;
}
footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  clear: both;
  background-color: #111;
  color: #f1f1f1;
}
footer .inner div {
  float: left;
  font-size: 15px;
  line-height: 40px;
  margin-right: 40px;
}
footer .inner div a {
  color: #777;
  text-decoration: none;
  text-transform: capitalize;
  font-weight: bold;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
footer .inner div a:hover {
  color: #b7b7b7;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
footer .inner div a.cta {
  color: #fff;
  padding: 11px 5px 12px 5px;
  background: inherit;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
footer .inner div a.cta:hover {
  color: #000;
  background: #fff;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
footer .inner div a .rva-plus {
  font-size: 13px;
}
footer .inner div:first-of-type {
  margin-left: 10px;
}
@font-face {
  font-family: 'rva-icon';
  src: url("../fonts/rva-icon.eot");
  src: url("../fonts/rva-icon.eot?#iefix") format("embedded-opentype"), url("../fonts/rva-icon.woff") format("woff"), url("../fonts/rva-icon.ttf") format("truetype"), url("../fonts/rva-icon.svg#rva-icon") format("svg");
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: "rvamakes";
  src: url("../fonts/rvamakes.eot");
  src: url("../fonts/rvamakes.eot?#iefix") format("embedded-opentype"), url("../fonts/rvamakes.woff") format("woff"), url("../fonts/rvamakes.ttf") format("truetype"), url("../fonts/rvamakes.svg#rvamakes") format("svg");
  font-weight: normal;
  font-style: normal;
}
/* Use the following CSS code if you want to use data attributes for inserting your icons */
[data-icon]:before {
  font-family: 'rva-icon';
  content: attr(data-icon);
  speak: none;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
/* Use the following CSS code if you want to have a class per icon */
/*
Instead of a list of all class selectors,
you can use the generic selector below, but it's slower:
[class*="rva-"] {
*/
.rva-RVAlogo_v2,
.rva-RVAlogo_v1 {
  font-family: 'rva-icon';
  color: #000000;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
.rva-RVAlogo_v2:before {
  content: "\52";
}
.rva-RVAlogo_v1:before {
  content: "\72";
}
.rva-logo,
.rva-arrow-down,
.rva-plus {
  font-family: 'rvamakes';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}
.rva-logo:before {
  content: "\31";
}
.rva-arrow-down:before {
  content: "\32";
}
.rva-plus:before {
  content: "\2b";
}
@media (min-width: 1225px) {
  header .inner,
  footer .inner {
    width: 1225px;
  }
  header .inner .selector .prefix {
    color: #777;
    float: left;
    line-height: 87px;
  }
  header .inner .selector .prefix span {
    font-size: 76px;
  }
  header .inner .selector .current {
    margin-top: -2px;
    font-size: 105px;
  }
  header .inner .selector .fob span {
    font-size: 45px;
  }
  header .inner .options {
    left: 235px;
    width: 980px;
  }
  header .inner .options div {
    width: 450px;
    line-height: 45px;
    font-size: 45px;
  }
  section {
    width: 1225px;
  }
}
@media (min-width: 768px) and (max-width: 979px) {
  header .inner,
  footer .inner {
    width: 735px;
  }
  header .inner .selector .prefix {
    line-height: 55px;
  }
  header .inner .selector .prefix span {
    font-size: 46px;
  }
  header .inner .selector .current {
    font-size: 64px;
    margin: -4px;
  }
  header .inner .options {
    left: 0;
    width: 735px;
  }
  header .inner .options div {
    width: 327px;
    line-height: 40px;
    font-size: 30px;
  }
  section {
    width: 735px;
  }
}
@media (max-width: 767px) {
  header .inner,
  footer .inner {
    width: 100%;
  }
  header {
    height: 50px;
    border-bottom: 1px solid #efefef;
  }
  header .inner {
    padding-top: 0px;
  }
  header .inner .selector .prefix,
  header .inner .selector .current,
  header .inner .selector .fob {
    line-height: 50px;
  }
  header .inner .selector .prefix {
    line-height: 5px;
  }
  header .inner .selector .prefix span {
    font-size: 24px;
  }
  header .inner .selector .current {
    font-size: 35px;
    margin: -2px;
  }
  header .inner .selector .fob {
    width: 50px;
    margin-right: 0px;
    line-height: 28px;
  }
  header .inner .selector .fob span {
    font-size: 25px;
  }
  header .inner .options {
    top: 50px;
    left: 0;
    width: 100%;
  }
  header .inner .options div {
    width: 46%;
    line-height: 40px;
    font-size: 24px;
    padding: 5px 2%;
  }
  section {
    padding-top: 20px;
    width: 490px;
  }
}
@media (max-width: 492px) {
  header .inner .selector .prefix,
  header .inner .selector .current,
  header .inner .selector .fob {
    line-height: 50px;
  }
  header .inner .selector .prefix {
    line-height: 1px;
  }
  header .inner .selector .prefix span {
    font-size: 20px;
  }
  header .inner .selector .current {
    font-size: 29px;
    margin: -1px;
  }
  header .inner .selector .fob {
    width: 50px;
    margin-right: 0px;
    line-height: 28px;
  }
  header .inner .selector .fob span {
    font-size: 25px;
  }
  section {
    padding-top: 20px;
    width: 225px;
  }
  #list .item {
    padding: 0;
    margin: 0 0 20px;
  }
  footer .inner div {
    margin-right: 28px;
  }
}
.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}
.clearfix:after {
  clear: both;
}

